test/scc/ext/tm/semantic-errors/003.a
003.t:8:13: error: jumping into the body of _Atomic block using case statement is prohibited